# gameserver

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp  pch.h  process.cpp  process.h  ptcregister.cpp
client/network/: clientlink.cpp  clientlink.h  loginlink.cpp  loginlink.h  protocolcoder.cpp
client/protocol/common/: ptcc2t_createnpc.h  sendonly.cpp
client/protocol/game/: ptcc2c_heartbeat.cpp  ptch2c_senditemptf.cpp  ptct2c_heartbeat.cpp  rpcc2h_entergamereq.cpp  rpcc2h_startmatch.cpp  rpcc2t_clienttokenauth.cpp  rpcc2t_createactorcli2gate.cpp  rpcc2t_entergametest.cpp
client/protocol/login/: rpcc2l_createactor.cpp  rpcc2l_loginreq.cpp
client/robot/: robotmgr.cpp  robotmgr.h
client/session/: usermgr.cpp  usermgr.h
conf/: login_conf.xml
dbserver/: CMakeLists.txt  config.cpp  config.h  dbprocess.cpp  dbprocess.h  main.cpp  pch.h  ptcregister.cpp
dbserver/cache/: dbeventconv.cpp  dbeventconv.h  memorysyncdb.cpp  memorysyncdb.h
dbserver/mysql/: mysqlmgr.cpp  mysqlmgr.h  mysqlthread.cpp
dbserver/mysql/task/: actorinserttask.cpp  actorinserttask.h  actorquerytask.cpp  actorquerytask.h  actorupdatetask.cpp  actorupdatetask.h
dbserver/network/: halllink.cpp  halllink.h
dbserver/profile/: dbprofiler.cpp  dbprofiler.h
dbserver/protocol/common/: rpcc2d_registergate2login.cpp  rpch2d_registerhalltodb.cpp
dbserver/protocol/db/: rpch2d_chickdinnerdata2db.cpp  rpch2d_chickdinnerquerydata.cpp
dbserver/protocol/game/: rpch2d_createactorhall2db.cpp  rpch2d_queryactordb.cpp  rpch2d_updateactordata.cpp
dbserver/redis/: redishelper.cpp  redishelper.h  redismgr.cpp  redismgr.h  redisthread.cpp
dbserver/redis/redistask/: actordatareadtask.cpp  actordatareadtask.h  actordatawritetask.cpp  actordatawritetask.h
doc/: 好友系统设计.txt  文件目录介绍.txt  缓存服务器设计.txt  编译命令.txt
gateserver/: CMakeLists.txt  config.cpp  config.h  main.cpp  pch.h  process.cpp  process.h  ptcregister.cpp
gateserver/network/: clientlink.cpp  clientlink.h  halllink.cpp  halllink.h  loginlink.cpp  loginlink.h  protocolcoder.cpp  protocolcoder.h  protocolstat.cpp  protocolstat.h
gateserver/protocol/: sendonly.cpp
gateserver/protocol/common/: rpct2h_registergatetohall.cpp  rpct2l_registergate2login.cpp
gateserver/protocol/game/: rpcc2t_clienttokenauth.cpp  rpcc2t_createactorcli2gate.cpp  rpcc2t_entergametest.cpp  rpct2h_createactorgate2hall.cpp  rpct2h_getactors.cpp  rpct2h_queryactordb.cpp
gateserver/protocol/login/: ptcl2t_loginsession2gatentf.cpp
gateserver/session/: protowindow.h  sessionmanager.cpp  sessionmanager.h
hallserver/: CMakeLists.txt  config.cpp  config.h  foreach.h  hprocess.cpp  hprocess.h  main.cpp  minidump.h  pch.h  ptcregister.cpp  ptcregister.h
hallserver/actor/: actor.cpp  actor.h  actormgr.cpp  actormgr.h
hallserver/doc/: 设计的思路.remind
hallserver/friend/: friend.cpp  friend.h  friendmgr.cpp  friendmgr.h
hallserver/hall/: hallmgr.cpp  hallmgr.h
hallserver/match/: matchunit.h
hallserver/network/: dblink.cpp  dblink.h  gatelink.cpp  gatelink.h  mdclink.cpp  mdclink.h
hallserver/protocol/common/: rpch2d_downroledata.cpp  rpch2d_registerhalltodb.cpp  rpch2d_uproledata.cpp  rpct2h_registergatetohall.cpp
hallserver/protocol/db/: rpch2d_chickdinnerdata2db.cpp  rpch2d_chickdinnerquerydata.cpp
hallserver/protocol/game/: ptcc2h_cancelmatch.cpp  ptct2h_buyitemptf.cpp  rpcc2h_entercbr.cpp  rpcc2h_entergamereq.cpp  rpcc2h_startmatch.cpp  rpch2d_createactorhall2db.cpp  rpch2d_queryactordb.cpp  rpch2d_updateactordata.cpp  rpch2m_reghall2mdc.cpp  rpct2h_createactorgate2hall.cpp  rpct2h_getactors.cpp  rpct2h_queryactordb.cpp
hallserver/protocol/login/: ptct2h_loginoutntf.cpp
hallserver/redis/: redishelper.cpp  redishelper.h  redismgr.cpp  redisthread.cpp  redisthread.h
hallserver/redis/task/: actorreadtask.cpp  actorreadtask.h
lib/: hiredis.lib  iocp.lib  kcp.lib  libhttp.lib  libprofiler.so.0  libprotobuf-lite.lib  libtcmalloc.so.4  libutil.a.bak  mysql.lib  zlib.lib
lib/windows/: iocp_d.lib
loginserver/: CMakeLists.txt  config.cpp  config.h  main.cpp  pch.h  process.cpp  ptcregister.cpp
loginserver/connection/: connectionmgr.cpp  connectionmgr.h
loginserver/dbtask/: createactortask.cpp  createactortask.h  insertusertask.cpp  insertusertask.h  queryusertask.cpp  queryusertask.h  userauth.cpp  userauth.h  userregtask.cpp  userregtask.h
loginserver/login/: mysqlmgr.cpp  mysqlmgr.h  mysqlthread.cpp  mysqlthread.h  verifymgr.cpp  verifymgr.h
loginserver/network/: clientlink.cpp  clientlink.h  gatelink.cpp  gatelink.h
loginserver/protocol/: sendonly.cpp
loginserver/protocol/account/: rpcc2l_regaccount.cpp
loginserver/protocol/common/: rpct2l_registergate2login.cpp
loginserver/protocol/login/: rpcc2l_createactor.cpp  rpcc2l_loginreq.cpp
loginserver/session/: sessionmgr.cpp  sessionmgr.h
mdcserver/: CMakeLists.txt  config.cpp  config.h  main.cpp  pch.h  process.cpp  process.h  ptcregister.cpp
mdcserver/network/: dclink.cpp  dclink.h  halllink.cpp  halllink.h
protocol/account/: rpcc2l_regaccount.cpp  rpcc2l_regaccount.h
protocol/common/: rpcc2d_registergate2login.h  rpch2d_downroledata.h  rpch2d_registerhalltodb.h  rpch2d_uproledata.h  rpct2h_registergatetohall.h  rpct2l_registergate2login.h
protocol/db/: rpch2d_chickdinnerdata2db.h  rpch2d_chickdinnerquerydata.h
protocol/game/: ptcc2c_heartbeat.h  ptcc2h_cancelmatch.h  ptch2c_senditemptf.h  ptct2c_heartbeat.h  ptct2h_buyitemptf.h  rpcc2h_entercbr.h  rpcc2h_entergamereq.h  rpcc2h_startmatch.h  rpcc2t_clienttokenauth.h  rpcc2t_createactorcli2gate.h  rpcc2t_entergametest.h  rpch2d_createactorhall2db.h  rpch2d_queryactordb.h  rpch2d_updateactordata.h  rpch2m_reghall2mdc.h  rpch2m_registerhalltodcm.h  rpct2h_createactorgate2hall.h  rpct2h_getactors.h  rpct2h_queryactordb.h
protocol/login/: ptcl2t_loginsession2gatentf.h  ptct2h_loginoutntf.h  rpcc2l_createactor.h  rpcc2l_loginreq.h
protocol/pb/: enum.pb.cc  enum.pb.h  project.pb.cc  project.pb.h
winproject/client/: client.sln  client.vcxproj  client.vcxproj.filters
winproject/dbserver/: dbserver.vcxproj  (+1 more)
(+23 files in other folders)
