SET(APP client)
INCLUDE_DIRECTORIES( . network protocol )
#LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
INCLUDE_DIRECTORIES(${SERVER_SOURCE_DIR}/share )
#INCLUDE_DIRECTORIES(${SERVER_SOURCE_DIR}/protocol )

LINK_DIRECTORIES( /usr/lib64/mysql )


FILE(GLOB_RECURSE SRC_LIST *.cpp)
AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/share/util SRC_LIST)
#AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/protocol/pb SRC_LIST)
AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/share/utildb SRC_LIST)

LIST(APPEND SRC_LIST ${SERVER_SOURCE_DIR}/share/DBInfo.cpp)

ADD_EXECUTABLE(client ${SRC_LIST})
TARGET_LINK_LIBRARIES(client pb common epoll util pthread mysql mysqlclient tcmalloc profiler protobuf z)

IF(NOT DEFINED USE_ASAN)
	TARGET_LINK_LIBRARIES(${APP} tcmalloc)
	set_target_properties(${APP} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "pch.h")
	cotire(${APP})
ENDIF()



