SET(APP dbserver)

INCLUDE_DIRECTORIES( . network protocol )
INCLUDE_DIRECTORIES( /usr/include/mysql )
INCLUDE_DIRECTORIES( ${SERVER_SOURCE_DIR}/share )
INCLUDE_DIRECTORIES(${SERVER_SOURCE_DIR}/thirdparty/libevhtp-1.2.10)
INCLUDE_DIRECTORIES(${SERVER_SOURCE_DIR}/thirdparty/libevhtp-1.2.10/evthr)
INCLUDE_DIRECTORIES(${SERVER_SOURCE_DIR}/thirdparty/libevhtp-1.2.10/htparse)

LINK_DIRECTORIES( /usr/lib64/mysql )
#LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

FILE(GLOB_RECURSE SRC_LIST *.cpp)
#AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/share SRC_LIST)
AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/share/util SRC_LIST)
AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/share/utildb SRC_LIST)
AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/share/profile SRC_LIST)
#AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/protocol/pb SRC_LIST)

ADD_EXECUTABLE(${APP} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${APP} pb common epoll util pthread mysqlclient profiler protobuf z scew expat curl hiredis)

IF(NOT DEFINED USE_ASAN)
	TARGET_LINK_LIBRARIES(${APP} tcmalloc)
	set_target_properties(${APP} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "pch.h")
	cotire(${APP})
ENDIF()
