SET(APP gateserver)

INCLUDE_DIRECTORIES( . network protocol )
#LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
INCLUDE_DIRECTORIES(${SERVER_SOURCE_DIR}/share )
INCLUDE_DIRECTORIES(${SERVER_SOURCE_DIR}/thirdparty/kcp )



FILE(GLOB_RECURSE SRC_LIST *.cpp)
#AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/protocol/pb SRC_LIST)
AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/share/version SRC_LIST)
AUX_SOURCE_DIRECTORY(${SERVER_SOURCE_DIR}/share/profile SRC_LIST)



ADD_EXECUTABLE(${APP} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${APP} pb common epoll util kcp pthread profiler protobuf z)


IF(NOT DEFINED USE_ASAN)
	TARGET_LINK_LIBRARIES(${APP} tcmalloc)
	set_target_properties(${APP} PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "pch.h")
	cotire(${APP})
ENDIF()
